---------------------------------------------------------------------------------------------------
Version: 999.999.999
Date: 9999-99-99
  Changes:
  Features:
  Bugfixes:
    - Fixed infinite game loop/freeze when researching technologies with (infinite) levels.
---------------------------------------------------------------------------------------------------
Version: 5.1.0
Date: 2025-03-29
  Features:
    - Added approval handling support for 3rd-party mods (such as https://mods.factorio.com/mod/pump) that build ghosts and raise an event for it. If responsible player cannot be determiend (required in order to determine if ghost should be auto-approved or not), a warning is logged.
---------------------------------------------------------------------------------------------------
Version: 5.0.0
Date: 2025-03-29
  Changes:
    - Renamed mod in order to avoid confusion with the original Construction Planner by ceresward, which has seen active development for Factorio 2.0. Take note that the two code 
bases have diverged at this point.
    - Renamed /cp_cleanup command to /ca_cleanup (for naming consistency).
    - Default size of approval indicators has been reduced. Previous value can be configured by setting "Approval indicator size" to "Huge" in the map settings.
  Features:
    - Improved performance when using blueprint books from inventory or blueprint library.
    - Setting for controlling the size of approval indicators.
  Bugfixes:
    - Placeholder markers are no longer included in updated blueprints from player/game library.
---------------------------------------------------------------------------------------------------
Version: 4.0.7
Date: 2025-02-22
  Bugfixes:
    - Fixed crash when using blueprint book which contains blueprint without any entities.
---------------------------------------------------------------------------------------------------
Version: 4.0.6
Date: 2024-11-17
  Features: