@@ -3,4 +3,3 @@ ca-cleanup-command-confirm=[color=yellow][WARNING][/color] Please re-run the ca_
 ca-cleanup-command-started=[color=yellow][WARNING][/color] Clean-up command is running for Construction Approvals to fix eventual inconsistencies.
 ca-cleanup-command-finished=[color=yellow][WARNING][/color] Clean-up command for Construction Approvals has finished running. Should you detect inconsistencies or missing ghosts, please restore game from a backup, and file a bug report.
 ca-failed-force-paste=[color=yellow][WARNING][/color] Construction Approvals: Failed to place an unapproved ghost (__1__). If you are able to reproduce the issue, please report reproduction steps on mod's discussion pages.
-ca-script-built-no-last-user=[color=yellow][WARNING][/color] Construction Approvals: Could not determine player responsible for placing the ghost entity (__1__). Ghost entity will be approved for building. Please report the issue on mod's discussion pages.
